# slack-mcp-client

./: .clinerules  .env.example  .gitignore  Dockerfile  README.md  cli.py  config.json  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  system.md
.github/workflows/: build.yml  deploy.yml  tests.yml
docker/: dev.Dockerfile  prod.Dockerfile
docker/logstash/pipeline/: logstash.conf
docker/mock-services/: gmail.Dockerfile  notion.Dockerfile
docker/mock-services/gmail/: main.py
docker/mock-services/notion/: main.py
docker/nginx/certs/: generate-certs.sh
docker/nginx/conf/: default.conf
docker/postgres/init/: 01-init.sql
infrastructure/: alb-config.json  cloudwatch-alarms.json  cloudwatch-logs.json  ecs-task-definition.json  fargate-service.json  monitoring-dashboard.json
logs/: master_key.json
memory_bank/: ARCHITECTURE.md  slack_mcp_implementation_plan.md
src/: config.py  logging_config.py  main.py
src/agent/: config.py  exceptions.py  integration.py
src/mcp/: client.py  connector.py  exceptions.py  protocol.py
src/mcp_client/: __init__.py  agent_manager.py  agent_manager_interface.py  client.py  server_manager.py
src/security/audit/: audit_logger.py
src/slack/: client.py  event_handler.py  exceptions.py  verification.py
src/slack_bot/: README.md  __init__.py  markdown_formatter.py
tests/: __init__.py  conftest.py  test_import.py
tests/integration/: test_end_to_end.py
tests/unit/: test_fast_agent.py  test_mcp_client.py  test_slack_handler.py
(+9 files in other folders)
